# tlemmas-enumeration-testbench

./: .gitignore  README.md  config.yaml.example  pyproject.toml
data/benchmark/planning/h2/Painter/: 10_1.smt2  10_2.smt2  10_3.smt2  11_1.smt2  11_2.smt2  11_3.smt2  12_1.smt2  12_2.smt2  12_3.smt2  3_1.smt2  3_2.smt2  3_3.smt2  4_1.smt2  4_2.smt2  4_3.smt2  5_1.smt2  5_2.smt2  5_3.smt2  6_1.smt2  6_2.smt2  6_3.smt2  7_1.smt2  7_2.smt2  7_3.smt2  8_1.smt2  8_2.smt2  8_3.smt2  9_1.smt2  9_2.smt2  9_3.smt2
data/benchmark/planning/h3/Painter/: 10_1.smt2  10_2.smt2  10_3.smt2  11_1.smt2  11_2.smt2  11_3.smt2  12_1.smt2  12_2.smt2  12_3.smt2  3_1.smt2  3_2.smt2  3_3.smt2  4_1.smt2  4_2.smt2  4_3.smt2  5_1.smt2  5_2.smt2  5_3.smt2  6_1.smt2  6_2.smt2  6_3.smt2  7_1.smt2  7_2.smt2  7_3.smt2  8_1.smt2  8_2.smt2  8_3.smt2  9_1.smt2  9_2.smt2  9_3.smt2
data/benchmark/planning/h4/Painter/: 10_1.smt2  10_2.smt2  10_3.smt2  11_1.smt2  11_2.smt2  11_3.smt2  12_1.smt2  12_2.smt2  12_3.smt2  3_1.smt2  3_2.smt2  3_3.smt2  4_1.smt2  4_2.smt2  4_3.smt2  5_1.smt2  5_2.smt2  5_3.smt2  6_1.smt2  6_2.smt2  6_3.smt2  7_1.smt2  7_2.smt2  7_3.smt2  8_1.smt2  8_2.smt2  8_3.smt2  9_1.smt2  9_2.smt2  9_3.smt2
data/benchmark/planning/h5/Painter/: 10_1.smt2  10_2.smt2  10_3.smt2  11_1.smt2  11_2.smt2  11_3.smt2  12_1.smt2  12_2.smt2  12_3.smt2  3_1.smt2  3_2.smt2  3_3.smt2  4_1.smt2  4_2.smt2  4_3.smt2  5_1.smt2  5_2.smt2  5_3.smt2  6_1.smt2  6_2.smt2  6_3.smt2  7_1.smt2  7_2.smt2  7_3.smt2  8_1.smt2  8_2.smt2  8_3.smt2  9_1.smt2  9_2.smt2  9_3.smt2
data/benchmark/synthetic/ldd_randgen/data/ldd_phi_problems_b10_r10_d4_m20_s1234/01/: ldd_phi_b10_d4_r10_s1234_01.smt2
data/benchmark/synthetic/ldd_randgen/data/ldd_phi_problems_b10_r10_d4_m20_s1234/02/: ldd_phi_b10_d4_r10_s1234_02.smt2
data/benchmark/synthetic/ldd_randgen/data/ldd_phi_problems_b10_r10_d4_m20_s1234/03/: ldd_phi_b10_d4_r10_s1234_03.smt2
data/benchmark/synthetic/ldd_randgen/data/ldd_phi_problems_b10_r10_d4_m20_s1234/04/: ldd_phi_b10_d4_r10_s1234_04.smt2
data/benchmark/synthetic/ldd_randgen/data/ldd_phi_problems_b10_r10_d4_m20_s1234/05/: ldd_phi_b10_d4_r10_s1234_05.smt2
data/benchmark/synthetic/ldd_randgen/data/ldd_phi_problems_b10_r10_d4_m20_s1234/06/: ldd_phi_b10_d4_r10_s1234_06.smt2
data/benchmark/synthetic/ldd_randgen/data/ldd_phi_problems_b10_r10_d4_m20_s1234/07/: ldd_phi_b10_d4_r10_s1234_07.smt2
data/benchmark/synthetic/ldd_randgen/data/ldd_phi_problems_b10_r10_d4_m20_s1234/08/: ldd_phi_b10_d4_r10_s1234_08.smt2
scripts/: benchmark_controller.py
scripts/plots/: compare_tlemmas_generation_time.py
scripts/tasks/: dimacs.py  generate_tlemmas.py  tabularallsat.py  tlemmas_check.py
(+441 files in other folders)
