[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlemmas-enumeration-testbench"
version = "1.0.0"
description = "Scripts and utils to test T-lemmas enumeration techniques"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Emanuele Civini", email = "emanuelecivini@gmail.com" }
]
keywords = ["SMT", "Knowledge Compilation", "Enumeration"]
dependencies = [
    "allsat_cnf @ git+https://github.com/masinag/allsat-cnf@main",
    "astutils==0.0.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "Cython==3.0.8",
    "dd==0.6.0",
    "fonttools==4.61.1",
    "gitdb==4.0.12",
    "GitPython==3.1.46",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "packaging==26.0",
    "pillow==12.1.0",
    "ply==3.10",
    "psutil==7.2.2",
    "pydot==1.4.2",
    "pyparsing==3.3.2",
    "PySDD==1.0.0",
    "PySMT==0.9.7.dev333",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.3",
    "setuptools==82.0.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "tlemmas_enumeration @ git+https://github.com/ecivini/tlemmas-enumeration@main",
]

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I"]
ignore = []
